# looker-fields-extraction

./: .gitignore  README.md  looker_40_openapi.json  pyproject.toml
docs/: AGENT_LOOP.md  DEV_GUIDE.md  FIELD_SPEC.md  VERIFICATION.md
gsd-lite/: ARCHITECTURE.md  PROJECT.md  WORK.md
src/looker_fields/: __init__.py  cli.py  client.py  config.py  extract.py  output.py  schema.py
